# eDNA_bioinformatics_pipeline

./: (deprecated)read.py  (deprecated)read_all.py  .gitattributes  README.md  check_db_subspc.py  check_edna_data.py  check_file_size.py  check_inter_species.py  compare_species_result.py  compare_zotu_result.py  cut_mifish_primer_region.py  docker.md  dockerfile  find_duplicate_seq.py  find_partial_seq.py  pipeline.py  plot_circle.py  pyproject.toml  pytest.ini  read_all.py  requirements.txt  search_12s.py  setup.py
analysis_pipeline/: analysis_function.py  analysis_manager.py  barchart_generator.py  blast_csv.py  color_umap.py  color_utils.py  data_container.py  exec_umap.py  fasta.py  hap_network_nex_generator.py  integrate_analysis.py  integrate_samples.py  ml_tree_generator.py  read_blast_csv.py  read_denoise_report.py  read_fasta.py  run_hdbscan.py  run_umap.py  umap_generator.py  utils_barchart.py  utils_color.py  utils_hdbscan.py  utils_sequence.py  utils_tree.py  utils_umap.py
analyze_database/: check_db_subspc.py  get_mugil_cephalus_seq.py
check_accuracy/: compare_species_result.py  plot_accuracy.py
old_code/: 0_1_merged_pe.py  1_2_cutadapt.py  2_3_fq_to_fa.py  3_4_dereplicate.py  4_5_otu.py  4_5_zotus.py  5_6_blast.py
old_code/analyze_database/: boxplot_intraspecific_variations.py  check_db_sequence_number.py  check_edna_data.py  get_seq_descip.py
old_code/deprecated_main_code/: (deprecated)analysis_function.py  (deprecated)analysis_manager.py  (deprecated)read.py
old_code/other_tools/: change_filename.py
other_tools/: barchart_number_of_read.py  make_iTOL_annotation.py
src/: demo_pipeline.py  pipeline.py  read.py
src/analysis_toolkit/: __init__.py  barchart_generator.py  barchart_plotter.py  data_container.py  hap_network_nex_generator.py  hdbscan_runner.py  ml_tree_generator.py  mltree_runner.py  nexus_writter.py  umap_generator.py  umap_runner.py
src/edna_processor/: (deprecated)integrate_analysis.py  analysis_manager.py  barchart_generator.py  data_container.py  hap_network_nex_generator.py  main.py  ml_tree_generator.py  read_denoise_report.py  read_fasta.py  umap_generator.py  utils_sequence.py
src/fastq_processor/: __init__.py  run_processor.py
src/stage/: cutadapt_stage.py  runner.py  stage_bbmap_fq_to_fa.py  (+11 more)
tests/: test_analysis_function.py  test_blast_reader.py  test_cutadapt_stage.py  test_stage_bbmap_fq_to_fa.py  test_stage_blastn_assign_taxa.py  test_stage_cutadapt_cut_primer.py  test_stage_usearch_denoise.py  test_stage_usearch_dereplicate.py  test_stage_usearch_merge.py  test_usearch_merge_stage.py
(+58 files in other folders)
